<?xml version="1.0"?>
<package format="2">
	<name>pointcloud_registration</name>
	<version>1.0.0</version>
	<description>6 DoF pointcloud registration</description>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>charuco_detector</depend> <!-- https://github.com/carlosmccosta/charuco_detector -->
	<depend>dynamic_robot_localization</depend> <!-- https://github.com/carlosmccosta/dynamic_robot_localization -->
	<depend>object_recognition_skill_server</depend> <!-- https://github.com/carlosmccosta/object_recognition -->
	<depend>tf</depend>
</package>
